--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body{
     padding: 0;
     margin: 0;
@@ -13,11 +12,34 @@ nav{
     padding: 20px;
 }
 
+.logoLink{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    padding: 0;
+}
+
 .logo{
-    width: 50px;
-    height: 50px;
     left: 0;
-    padding: 10px;
+    padding: 0;
+}
+
+.titleDiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.subjectDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bodyDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 footer {
